--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,20 @@
+/* Botones social4*/
+#m-soc4{width:250px;height:55px;float: right;margin: -20px 0 0 10px;padding:0}
+#m-soc4 li{list-style:none;float:right;border:none;margin:4px;padding:0}
+#m-soc4 li a{background:url(../images/sprite_botones.png) no-repeat 0 0;width:41px;height:40px;display:block;position:relative;overflow:visible;margin:0;padding:0}
+#m-soc4 li a.twitter{background-position:0 -41px;height:38px}
+#m-soc4 li a.facebook{background-position:-41px -40px}
+#m-soc4 li a.google{background-position:-82px -40px}
+#m-soc4 li a.youtube{background-position:-123px -40px}
+#m-soc4 li a.rss{background-position:-164px -40px}
+#m-soc4 li a.twitter:hover{background-position:0 0}
+#m-soc4 li a.facebook:hover{background-position:-41px 0}
+#m-soc4 li a.google:hover{background-position:-82px 0}
+#m-soc4 li a.youtube:hover{background-position:-122px 0}
+#m-soc4 li a.rss:hover{background-position:-163px 0}
+#m-soc4 li a span{background:#555;position:absolute;top:-10px;left:-10px;width:auto;height:auto;opacity:0;text-align:left;color:#fff;filter:alpha(opacity=0);white-space:nowrap;border-radius:3px;font-size:12px;-webkit-transition:all .25s ease-in-out;-moz-transition:all .25s ease-in-out;-o-transition:all .25s ease-in-out;transition:all .25s ease-in-out;padding:3px}
+#m-soc4 li a:hover{text-decoration:none}
+#m-soc4 li a:hover span{opacity:.8;filter:alpha(opacity=80);top:-23px}
 
 aside .enlaces
 {
@@ -29,8 +46,7 @@ footer h3
 }
 header
 {
-
-	background: #EEE ;
+	background:url(../images/textura01.jpg) #EEE ;
 	box-shadow: 0 5px 0 rgba(0,0,0,0.2);
 	color: white;
 	overflow: hidden;
@@ -41,21 +57,11 @@ header
 }
 header .logo img
 {
-	margin: 0;
+	margin: 0 0;
 	padding: 0;
 	width: 100%;
 }
-header .sociales
-{
-	
-	position: absolute;
-	right: 10px;
-	top: 10px;
-}
-header .sociales a
-{
-	display: block;
-}
+
 nav
 {
 	background: #3C71B6;
@@ -137,6 +143,8 @@ nav .menu li a
 }
 
 @media screen and (min-width: 768px){
+
+
 	.secciones
 	{
 		position: relative;
@@ -145,7 +153,13 @@ nav .menu li a
 	{
 		display: inline-block;
 		width: 70%;
+	}
 
+	header .logo img
+	{
+		margin: 0 0;
+		padding: 0;
+		width: 50%;
 	}
 
 	.anuncios
